--- a/input.css
+++ b/input.css
@@ -82,9 +82,9 @@ button {
   /* font-weight: 100; */
   /* font-size: 2rem; */
   /* width: 15rem; */
-  /* display: flex;
+  /* display: flex; */
   justify-content: space-between;
-  align-items: center; */
+  /* align-items: center; */
   opacity: 0;
   animation: moreDetailsFadeIn 300ms ease-in 1000ms forwards;
 }
